...
                ),
              ),
              const SizedBox(height: 40),
              
              // Title
              const Text(
                'Verifikasi Email Anda',
                style: TextStyle(
                  fontSize: 24,
                  fontWeight: FontWeight.bold,
                  color: Colors.black,
                  letterSpacing: 0.5,
                ),
...
